[gd_scene load_steps=8 format=3 uid="uid://bs7prrmapuatg"]

[ext_resource type="Script" uid="uid://p8e60pldhd3q" path="res://dummies/player_dummy.gd" id="1_3r2or"]
[ext_resource type="Texture2D" uid="uid://d0vyncuy087pt" path="res://assets/player_ss.png" id="1_m1q4l"]
[ext_resource type="AudioStream" uid="uid://cbbcrhrlc3u47" path="res://sound/effects/hit-flesh-02-266309.mp3" id="3_ki5ph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r2or"]
size = Vector2(20, 44)

[sub_resource type="Animation" id="Animation_ki5ph"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_3r2or"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ki5ph"]
_data = {
&"RESET": SubResource("Animation_ki5ph"),
&"death": SubResource("Animation_3r2or")
}

[node name="player_dummy" type="StaticBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_3r2or")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 6)
texture = ExtResource("1_m1q4l")
hframes = 6
frame = 2

[node name="ref" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -2)
texture = ExtResource("1_m1q4l")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_3r2or")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ki5ph")
}

[node name="kill_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CameraReleaseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="death_noise" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ki5ph")
volume_db = 2.0
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="kill_timer" to="." method="_on_kill_timer_timeout"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="CameraReleaseTimer" to="." method="_on_camera_exit_timer_timeout"]
